discussion/kv_engine/153565/153565_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42272: Correct logging of vbid

We are logging the address of the VBucket rather than the Vbid

Change-Id: I3c21b8e76887c7d3920e585a692cbbe0d4d624d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-13 16:07:50.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-13 16:25:34.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8965/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:865:30: error: expected ")" [clang-diagnostic-error]
                        vbid cookies.size());
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:864:13: note: to match this "("
            EP_LOG_INFO("{} Cancel {} blocked durability requests",
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger.h:259:5: note: expanded from macro "EP_LOG_INFO"
    EP_LOG_FMT(spdlog::level::level_enum::info, __VA_ARGS__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/bucket_logger.h:248:36: note: expanded from macro "EP_LOG_FMT"
            globalBucketLogger->log(severity, __VA_ARGS__); \
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8965/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ")" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8965/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35816/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\kv_bucket.cc(865): error C2146: syntax error: missing ")" before identifier "cookies" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35816/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30620/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30620/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9587/ : FAILURE

Compile error at [2021-05-13T16:12:49.829Z] ../kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9587/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10518/ : FAILURE

Compile error at [2021-05-13T16:09:44.543Z] ../kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ?)? before ?cookies?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10518/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10659/ : FAILURE

Compile error at [2021-05-13T16:14:29.259Z] ../kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ?)? before ?cookies?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10659/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10917/ : FAILURE

Compile error at [2021-05-13T16:09:22.593Z] ../kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10917/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18469/ : FAILURE

Compile error at [2021-05-13T16:24:11.935Z] ../kv_engine/engines/ep/src/kv_bucket.cc:865:30:
error: expected ")"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18469/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7517/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
